fix(sbb-footer, sbb-header): display divider to content on windows high contrast mode

--- a/src/components/sbb-footer/sbb-footer.scss
+++ b/src/components/sbb-footer/sbb-footer.scss
@@ -22,6 +22,10 @@
 .sbb-footer {
   padding-block: var(--sbb-spacing-responsive-l);
   background-color: var(--sbb-footer-background-color);
+
+  @include sbb.if-forced-colors {
+    border-block-start: var(--sbb-border-width-1x) solid CanvasText;
+  }
 }
 
 .sbb-footer-wrapper {
